--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
