--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kagi-summarizer-client",
   "version": "2.0.1",
-  "description": "Wrapper for the Kagi Universal Summarizer API",
+  "description": "Client for the Kagi Universal Summarizer API",
   "type": "module",
   "exports": {
     ".": "./dist/index.js"
